# -bear-protocol

./: BEAR-PROTOCOL-GUIDE.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  start-agents.sh
.claude/skills/stellar-hackathon/: SKILL.md
agents/buyer/: index.ts
agents/buyer/.kiro/specs/: buyer.md
agents/buyer/.kiro/steering/: agent.md
agents/registry/: package-lock.json  package.json  server.ts
agents/seller-copywriter/: agent.json  current-task.txt  index.ts
agents/seller-copywriter/.kiro/specs/: agent.md
agents/seller-copywriter/.kiro/steering/: agent.md
agents/seller-copywriter/output/: copy.md
agents/seller-namer/: agent.json  index.ts
agents/seller-namer/.kiro/specs/: agent.md
agents/seller-researcher/: agent.json  index.ts
agents/seller-webbuilder/: .env.example  agent.json  current-task.txt  index.ts  package.json
agents/seller-webbuilder/output/: website.html
contracts/agent-identity/: Cargo.toml
contracts/agent-identity/src/: lib.rs  test.rs
contracts/agentic-commerce/: Cargo.toml
contracts/agentic-commerce/src/: lib.rs  test.rs
dashboard/: package-lock.json
dashboard/lib/: discovery.ts
dashboard/public/: app.js
demo/: .env.example  buyer-agent.ts  lifecycle.ts  package-lock.json  package.json  seller-agent.ts  simulate.ts  tsconfig.json  tui.ts
docs/plans/: 2026-04-11-marc-stellar.md
docs/superpowers/specs/: 2026-04-11-marc-stellar-design.md
scripts/: build.sh  deploy-testnet.sh
sdk/: package-lock.json  package.json
sdk/src/: commerce.ts  identity.ts  index.ts  marcFetch.ts  marcPaywall.ts  types.ts
(+21 files in other folders)
