[workspace]
resolver = "2"
members = [
    "contracts/agent-identity",
]
# Phase 2 Task 2.1 adds "contracts/agentic-commerce"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"

[workspace.dependencies]
soroban-sdk = "25.3.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
